Fix: Width overflow issue

--- a/src/main.css
+++ b/src/main.css
@@ -25,7 +25,7 @@ body {
 }
 
 #root {
-  min-width: 100vw;
+  min-width: 100%;
 }
 
 .themeToggleBtn {
